# CHANGELOG

## 5.0.0
- No changes.

## 4.2.2
- .gitignore.template added.

## 4.2.1
- Added options for treatment selection.

## 4.2.0
- Added templates for README and LICENSE.

## 4.1.2
- Centered error message.
- Centered content.
- Set max-width same as header max-width (42em).

## 4.1.1
- Fixed HTML.

## 4.1.0
- Added support for antiSpoofing option in playerServer.

## 4.0.0
- Ported to nodeGame 4.x.

## 3.5.5
- Fixed `parent.node` reference in `index.js`.

## 3.5.4
- Minor documentation in game.setup.js.

## 3.5.3
- Printing out if a channel is default.

## 3.5.2
- Importing auth codes also from .js files.

## 3.5.1
- Updated auth.settings.js file.

## 3.5.0
- Using new ROLES API.

## 3.2.2
- Updated doc in waiting room.
- Updated parameters in function declaration in bot.js and phantom.js

## 3.2.1
- Updated waiting room and auth settings.

## 3.2.0
- Updated waiting room settings.

## 3.0.1
- Added settings in channel.settings.js.

## 3.0.0
- 02/10/2016 NodeGame Version Upgrade.

## 2.6.0
- Added additional hooks (ON_CONNECT, ON_DISCONNECT, etc).

## 2.5.0
- Optimized dispatching and notifying of new connections.
- Avoiding sending messages to clients disconnected by dispatch.

## 2.4.6
- sioQuery in channel.settings template.

## 2.4.5
- Waiting room stops the game of incoming players.

## 2.4.4
- Requirements room readds monitor on reconnect.

## 2.4.3
- Added option PING_BEFORE_DISPATCH to waitroom.settings.
- Better output in requirements.room.

## 2.4.2
- Added options PLAYER_GROUPING and PLAYER_SORTING to waitroom.settings.js template.

## 2.4.0
- Added requirement option: `browserDetect`.

## 2.3.0
- File: requirements.js and requirements.settings.js updated to support viewportSize test.
- Test speedTest might have not worked properly in previous version, fix added.
- Errors are thrown in requirements.js if parameters are not as expected.

## 2.2.0
- Added favicon.

## 2.1.0
- An error is thrown if the authorization mode is unknown.

## 2.0.3